Bug 240105 - Tabbing into ledger date field selects month instead of day
Summary: Tabbing into ledger date field selects month instead of day
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-30 17:51 UTC by Brian
Modified: 2010-05-31 15:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian 2010-05-30 17:51:59 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

When entering a transaction in a ledger, tabbing into the date field selects the month instead of the day.

Reproducible: Always

Steps to Reproduce:
Tab into the date field while entering a transaction

Actual Results:  
Month is selected

Expected Results:  
Day should be selected

My date format is set to MM/DD/YYYY.
Comment 1 Thomas Baumgart 2010-05-31 15:36:07 UTC
SVN commit 1132819 by tbaumgart:

Delay section selection until after the focus is settled

BUG: 240105

 M  +7 -2      kmymoneydateinput.cpp  
 M  +1 -0      kmymoneydateinput.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1132819