Delay section selection until after the focus is settled

BUG: 240105

svn path=/trunk/kdereview/kmymoney/; revision=1132819